dhall/tests/type-errors/unit/UnionTypeMixedKinds.txt
Type error: error: InvalidFieldType
 --> <current file>:1:0
  |
1 | < x : Bool | y : Type >
  | ^^^^^^^^^^^^^^^^^^^^^^^ InvalidFieldType
  |
